force-app/main/default/objects/ampi__Project_Role__c/ampi__Project_Role__c.object-meta.xml
<CustomObject>
    <description>Junction object to capture a contact&apos;s contribution to a project.</description>
    <label>Project Role</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Project Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>