force-app/main/default/objects/ampi__Project_Role__c/fields/ampi__Active__c.field-meta.xml
<CustomField>
    <fullName>ampi__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox field to mark whether or not a contact is currently active in a project.</description>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>