force-app/main/default/objects/ampi__Project_Role__c/fields/ampi__Contact__c.field-meta.xml
<CustomField>
    <fullName>ampi__Contact__c</fullName>
    <description>Master-detail relationship field to capture the individual person who contributed to a project.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Roles</relationshipLabel>
    <relationshipName>Project_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>