force-app/main/default/objects/ampi__Project_Role__c/fields/ampi__End_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__End_Date__c</fullName>
    <description>Date field for the end of an individual&apos;s contributions to a project.</description>
    <inlineHelpText>Please enter the end date of the contact&apos;s role in the project.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>