force-app/main/default/objects/ampi__Project_Role__c/fields/ampi__IATI_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Contact_Type__c</fullName>
    <description>Picklist field to select the Contact Type for IATI Reporting. The selection will print a code into the IATI Activity XML&apos;s iati-activities/iati-activity/contact-info/@type attribute.</description>
    <label>IATI Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>General Enquiries</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Project Management</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Financial Management</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Communications</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>