force-app/main/default/objects/ampi__Project_Role__c/fields/ampi__Is_IATI_Reporter__c.field-meta.xml
<CustomField>
    <fullName>ampi__Is_IATI_Reporter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate the role whose contact details are to be shared in IATI reporting for related activity. Only one Project Role within a single Project should have this field marked TRUE.</description>
    <label>IATI Reporter</label>
    <type>Checkbox</type>
</CustomField>