force-app/main/default/objects/ampi__Project_Role__c/fields/ampi__Project__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to capture the specific project to which a contact contributed.</description>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Project Roles</relationshipLabel>
    <relationshipName>Project_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>