force-app/main/default/objects/ampi__Project_Role__c/fields/ampi__Role__c.field-meta.xml
<CustomField>
    <fullName>ampi__Role__c</fullName>
    <description>Picklist to represent the different roles / titles that an individual might hold in a project.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Monitoring &amp; Evaluation Officer</fullName>
            </value>
            <value>
                <fullName>External Stakeholder</fullName>
            </value>
            <value>
                <fullName>Data Entry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>