force-app/main/default/objects/ampi__Project_Role__c/fields/ampi__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Start_Date__c</fullName>
    <description>Date field to capture when an individual began their engagement in a project.</description>
    <inlineHelpText>Please enter the start date of the contact&apos;s role in the project.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>